--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,17 @@
-== README
+###Recordly###
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+_Recordly_ will be an application that allows for users to input and store their record collection.  When complete, the user should be able to view their record collection, view a list of their "favorite" albums and/or songs, etc.  Duplicate albums/songs should not be allowed.  They should be able to "favorite" any of album/song/artist.
 
-Things you may want to cover:
+The site should have the following functionality:
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+- User login
+- Search
+- Views:
+  - Albums
+    - Individual album view with songs
+  - Artists
+  - Songs
+  - Favorites
+    - Albums
+    - Artists
+    - Songs
